--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -6,6 +6,12 @@
       <p class="auth-subtitle">Enter the OTP and your new password</p>
 
       <form action="/resetpassword" method="POST" class="auth-form" onsubmit="return passwordValidateChecking()">
+
+        <% if(typeof error!=='undefined' && error ) {%>
+           
+         <p class="text-red-700"> <%= error %> </p>
+
+        <%}%>
       
 
         <input type="number" name="otp" class="reset-passowrd-otp" placeholder="ENTER OTP" maxlength="6"
