--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -439,4 +439,29 @@
          });
       }
 
+    
+        
+          const successMessage = "<%- typeof success !== 'undefined' && success ? success.replace(/\"/g, '\\\"') : '' %>";
+            const errorMessage = "<%- typeof error !== 'undefined' && error ? error.replace(/\"/g, '\\\"') : '' %>";
+            
+            if (successMessage) {
+               Swal.fire({
+                  icon: 'success',
+                  title: 'Success!',
+                  text: successMessage,
+                  showConfirmButton: false,
+                  timer: 2000
+               });
+            }
+
+            if (errorMessage) {
+               Swal.fire({
+                  icon: 'error',
+                  title: 'Error!',
+                  text: errorMessage,
+                  showConfirmButton: true
+               });
+            }
+      
+
 </script>
