--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -39,17 +39,18 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center md:mx-20 mb-10">
     <% products.forEach(p=> { %>
       <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm relative flex flex-col">
-  <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500 favorite-btn" data-product-id="<%= p._id %>"
-    data-variant-id="<%= p.selectedVariant?._id %>" data-in-wishlist="<%= p.inWishlist %>">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 heart-icon" fill="<%= p.inWishlist ? 'red' : 'currentColor' %>"
-      viewBox="0 0 24 24">
-      <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 
+        <button class="absolute top-3 right-3 text-gray-400 hover:text-red-500 favorite-btn"
+          data-product-id="<%= p._id %>" data-variant-id="<%= p.selectedVariant?._id %>"
+          data-in-wishlist="<%= p.inWishlist %>">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 heart-icon"
+            fill="<%= p.inWishlist ? 'red' : 'currentColor' %>" viewBox="0 0 24 24">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 
                2 5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 2.09 
                C13.09 3.81 14.76 3 16.5 3 
                19.58 3 22 5.42 22 8.5 
                c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
-    </svg>
-  </button>
+          </svg>
+        </button>
 
 
 
@@ -83,17 +84,16 @@
               <span class="line-through text-gray-400 old-price">₹<%= p.oldPrice %></span>
             </div>
 
-        <button 
-  type="button"
-  onclick=<%= p.existingInCart ? 'window.location.href=\'/cart\'' : 'addToCart(this)' %>
-  class="add-cart text-gray-900 <%= p.existingInCart ? 'bg-yellow-600 hover:bg-yellow-700 text-black' : 'bg-yellow-500 hover:bg-yellow-600' %> focus:ring-4 focus:outline-none focus:ring-yellow-300
-         font-medium rounded-lg text-sm px-3 py-2.5 text-center"
-  data-product-id="<%= p._id %>" 
-  data-variant-id="<%= p.selectedVariant?._id %>" 
-  <%=(!p.selectedVariant || p.selectedVariant.stock <=0) ? 'disabled' : '' %>
->
-  <%= p.existingInCart ? 'Go to Cart' : 'Add to Cart' %>
-</button>
+            <button type="button" onclick=<%=p.existingInCart ? 'window.location.href=\' /cart\'' : 'addToCart(this)' %>
+              class="add-cart text-gray-900 <%= p.existingInCart ? 'bg-yellow-600 hover:bg-yellow-700 text-black'
+                : 'bg-yellow-500 hover:bg-yellow-600' %> focus:ring-4 focus:outline-none focus:ring-yellow-300
+                font-medium rounded-lg text-sm px-3 py-2.5 text-center"
+                data-product-id="<%= p._id %>"
+                  data-variant-id="<%= p.selectedVariant?._id %>"
+                    <%=(!p.selectedVariant || p.selectedVariant.stock <=0) ? 'disabled' : '' %>
+                      >
+                      <%= p.existingInCart ? 'Go to Cart' : 'Add to Cart' %>
+            </button>
 
 
           </div>
