auth page made responsive

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/styles/cart.css">
+
 <div class="max-w-6xl mx-auto p-6 flex flex-col md:flex-row gap-6">
 
     <!-- Shopping Cart -->
