--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="/styles.profile.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <button data-drawer-target="sidebar-multi-level-sidebar" data-drawer-toggle="sidebar-multi-level-sidebar"
    aria-controls="sidebar-multi-level-sidebar" type="button"
